[tool.poetry]
name = "data-viz"
version = "0.1.0"
description = ""
authors = ["Coklacour <jeremie.alluard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
folium = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
